# cmake-hello-world

./: CMakeLists.txt  LICENSE  Makefile  README.md
src/: main.cpp
